--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"start": "node --experimental-modules --es-module-specifier-resolution=node ./src/app.js",
-		"nodemon": "nodemon --experimental-modules --es-module-specifier-resolution=node ./src/app.js"
+		"nodemon": "nodemon --experimental-modules --es-module-specifier-resolution=node ./src/app.js",
+		"build": "babel src --out-dir build && ./node_modules/.bin/webpack"
 	},
 	"dependencies": {
 		"cookie-parser": "~1.4.4",
@@ -29,7 +30,15 @@
 	},
 	"type": "module",
 	"devDependencies": {
+		"@babel/core": "^7.19.3",
+		"@babel/plugin-proposal-object-rest-spread": "^7.19.4",
+		"@babel/plugin-transform-destructuring": "^7.19.4",
+		"@babel/preset-env": "^7.19.4",
+		"babel-loader": "^8.2.5",
 		"jsdoc": "^3.6.11",
-		"prettier": "2.7.1"
+		"prettier": "2.7.1",
+		"react-hot-loader": "^4.13.0",
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0"
 	}
 }
